--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>在线乞讨</title>
     <link rel="icon" type="image/svg+xml" href="https://www.sgfox.cc/favicon.ico">
-    <link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/pfmmd/dist/平方萌萌哒/result.css' />
+    <link rel='stylesheet' href='/Benmo Youyuan/result.css' />
     <style>
         /* 全局样式 */
         body {
-            font-family: "PING FANG MENG MNEG DA";
+            font-family: "Benmo Youyuan";
             margin: 0;
             padding: 0;
             display: flex;
@@ -54,7 +54,7 @@
 
         /* 切换按钮样式 */
         .tab-buttons button {
-            font-family: "PING FANG MENG MNEG DA";
+            font-family: "Benmo Youyuan";
             background-color: transparent;
             border: none;
             padding: 0.7rem 1.2rem;
