--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 </head>
 
 <body>
-    <h1>请我吃</h1>
-    <h1><span id="randomText"></span></h1>
+    <h1>请我吃<br><span id="randomText"></span></h1>
     <p>我说Vme50！</p>
     <div class="tab-buttons">
         <button onclick="showTab('wechat')">微信支付</button>
